spacing fixed

--- a/client/templates/public/css/styles.css
+++ b/client/templates/public/css/styles.css
@@ -284,7 +284,7 @@ canvas {
 
 .food-item {
   background-color: #ffffff;
-  padding: 20px;
+  padding: 37px;
   border-radius: 12px;
   box-sizing: border-box;
   width: 100%;
@@ -680,7 +680,7 @@ canvas {
   height: 90%;
   margin-left: 25%;
   background-color: #e4edf2;
-  margin-top: 20px;
+  margin-top: 80px;
   flex-wrap: wrap;
 }
 .right-image {
@@ -1133,7 +1133,7 @@ footer .copyright {
     font-size: 16px;
   }
   .signup-container {
-    /* margin-top: 50px; */
+    margin-top: 100px;
     /* padding: 40px; */
     margin-bottom: 4rem;
     margin-left: 1rem;
